[gd_scene load_steps=7 format=3 uid="uid://rw7gdui8lu3n"]

[ext_resource type="Script" path="res://COGITO/EasyMenus/Scripts/pause_menu_controller.gd" id="1_5etq0"]
[ext_resource type="Script" path="res://COGITO/Scripts/Btn_Ui_Sounds.gd" id="2_3y18l"]
[ext_resource type="PackedScene" uid="uid://qlskttl1wjr7" path="res://COGITO/EasyMenus/Scenes/options_menu.tscn" id="2_ejh0f"]
[ext_resource type="AudioStream" uid="uid://kbw2s407quul" path="res://COGITO/Assets/Audio/Kenney/UiAudio/click1.ogg" id="3_arj7o"]
[ext_resource type="AudioStream" uid="uid://cr3bcp0u6w1pl" path="res://COGITO/Assets/Audio/Kenney/UiAudio/mouseclick1.ogg" id="4_cpqh0"]
[ext_resource type="Script" path="res://COGITO/Scripts/scene_switcher.gd" id="4_vxssj"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5etq0")
sound_hover = ExtResource("4_cpqh0")
sound_click = ExtResource("3_arj7o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseMenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Pause Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Resume"
script = ExtResource("2_3y18l")
sfx_pressed = ExtResource("3_arj7o")
sfx_hover = ExtResource("4_cpqh0")

[node name="OptionsButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="BackToMenuButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_ejh0f")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SceneSwitcher" type="Node" parent="."]
script = ExtResource("4_vxssj")
main_menu_scene = "res://COGITO/DemoScenes/COGITO_MainMenu.tscn"
start_game_scene = "res://COGITO/DemoScenes/COGITO_Demo_01.tscn"

[connection signal="back_to_main_pressed" from="." to="SceneSwitcher" method="_on_pause_menu_back_to_main_pressed"]
[connection signal="pressed" from="Content/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Content/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="close" from="OptionsMenu" to="." method="_on_options_menu_close"]
